# moveit_drake

./: CMakeLists.txt  LICENSE  README.md  docker-compose.yaml  ktopt_interface_plugin_description.xml  moveit_drake.repos  package.xml  plugin_descriptions.xml
.docker/: Dockerfile  docker-compose.yaml  ros_entrypoint.sh  upstream.repos
.github/workflows/: format.yaml
demo/: CMakeLists.txt
demo/config/: testbench_moveit_cpp.yaml
demo/launch/: constrained_planning_demo.launch.py  pipeline_testbench.launch.py
demo/src/: constrained_planning_demo.cpp  pipeline_testbench_main.cpp
include/ktopt_interface/: ktopt_planning_context.h  ktopt_planning_context.hpp
include/moveit/drake/: conversions.hpp  diff_ik_plugin.hpp  global_ik_plugin.hpp  utils.hpp
include/toppra/: add_toppra_parameterization.hpp
include/toppra/res/: toppra_moveit.yaml
inlcude/moveit/drake/: global_ik_plugin.hpp
ktopt_planner/include/: ktopt_planning_context.h
ktopt_planner/src/: ktopt_planner_manager.cpp  ktopt_planning_context.cpp
parameters/: ktopt_moveit_parameters.yaml
res/: drake_moveit.yaml  ktopt_moveit_parameters.yaml
scripts/: convert_stl_to_obj.py
src/: add_toppra_time_parameterization.cpp  conversions.cpp  diff_ik_plugin.cpp  global_ik_plugin.cpp  ktopt_example.cpp  ktopt_planner_manager.cpp  ktopt_planning_context.cpp
