<?xml version="1.0"?>
<package format="3">
  <name>moveit_drake</name>
  <version>0.0.1</version>
  <description>Experimental MoveIt Drake integration</description>
  <author email="sebastian.jahr@picknik.ai">Sebastian Jahr</author>
  <maintainer email="sebastian.jahr@picknik.ai">Sebastian Jahr</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_common</depend>

  <depend>moveit_core</depend>
  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>generate_parameter_library</depend>
  <depend>eigen</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>

  <depend>moveit_core</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rviz_visual_tools</depend>

  <build_depend>eigen</build_depend>
  <build_depend>moveit_common</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
